# nibabel

./: .buildinfo  .coveragerc  .flake8  .git-blame-ignore-revs  .git_archival.txt  .gitattributes  .gitignore  .gitmodules  .mailmap  .pep8speaks.yml  .pre-commit-config.yaml  .project  .readthedocs.yaml  .travis.yml  .zenodo.json  AUTHOR  CITATION.cff  COPYING  Changelog  MANIFEST.in  Makefile  Makefile.win  README  README.html  README.rst  README.txt  TODO  api.html  appveyor.yml  azure-pipelines.yml  changelog.html  codecov.yml  coordinate_systems.html  dev-requirements.txt  diagnose.py  doc-requirements.txt  environment.yml  genindex.html  gettingstarted.html  image_orientation.html  (+24 more)
.azure-pipelines/: windows.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/workflows/: README  docs.yml  misc.yml  multithread.yml  pre-release.yml  prerelease.yml  stable.yml  test.yml  test_with_free_threaded_python.yml  windows.yml
3rd/nifticlibs/: Makefile  Makefile.win  README  nifti1_io.c  nifti1_io.h
_downloads/01d26ddfe66a9569b4cf79881141dece/: cross_product_error.ipynb
_downloads/83473e2bf68165d7691882d14e07c1fe/: ata_error.ipynb
_sources/: api.rst.txt  changelog.rst.txt  coordinate_systems.rst.txt  gettingstarted.rst.txt  image_orientation.rst.txt  installation.rst.txt  manual.rst.txt  neuro_radio_conventions.rst.txt  nifti_images.rst.txt  tutorials.rst.txt
_sources/devel/: add_image_format.rst.txt  advanced_testing.rst.txt  bv_formats.rst.txt  devguide.rst.txt  governance.rst.txt  make_release.rst.txt  modified_images.rst.txt  scaling.rst.txt  spm_use.rst.txt
_sources/dicom/: dicom_fields.rst.txt  dicom_intro.rst.txt  dicom_niftiheader.rst.txt  dicom_orientation.rst.txt  siemens_csa.rst.txt  spm_dicom.rst.txt
_sources/gitwash/: following_latest.rst.txt  forking_hell.rst.txt  git_install.rst.txt  index.rst.txt  maintainer_workflow.rst.txt  patching.rst.txt  set_up_fork.rst.txt
_sources/old/: ioimplementation.rst.txt
_sources/reference/: index.rst.txt  nibabel._compression.rst.txt  (+60 more)
_static/: copybutton.js  custom.css  documentation_options.js  sphinxdoc.css
cmdline/: diff.py  ls.py  utils.py
cnifti/: __init__.py  clib.i  extensions.py  format.py  image.py  imgfx.py  nifticlib.py  niftiformat.py  niftiimage.py  utils.py
debian/: changelog  control  copyright  gbp.conf  python-nibabel-doc.links  python-nibabel.install  python-nibabel.links  python-nifti.links  python-nifti.manpages  rules  watch
devel/: add_image_format.html  add_test_data.html  advanced_testing.html  bv_formats.html  core_developer.html  data_pkg_discuss.html  devdiscuss.html  devguide.html  governance.html  image_design.html  index.html  make_release.html  modified_images.html  roadmap.html  scaling.html  spm_use.html
dicom/: dcm2nii_algorithms.html  dicom.html  dicom_fields.html  dicom_info.html  dicom_intro.html  dicom_mosaic.html  dicom_niftiheader.html  dicom_orientation.html  siemens_csa.html  spm_dicom.html
doc/: Makefile  README.rst  conf.py  contents.txt  design.txt  devguide.rst  devguide.txt  downloads  examples.txt  format_design.txt  index.rst  index.txt  installation.txt  intro.txt  links_names.txt  manual.txt  modref.txt  orientation.txt
gitwash/: configure_git.html  development_workflow.html  following_latest.html  forking_hell.html  git_development.html  git_install.html  git_intro.html  git_resources.html  index.html  maintainer_workflow.html  patching.html  set_up_fork.html
man/: pynifti_pst.1
nibabel/: __init__.py  __init__.pyi  _compression.py  _h5py_compat.py  _typing.py  _version.py  _version.pyi  affines.py  analyze.py  arrayops.py  arrayproxy.py  arraywriters.py  batteryrunners.py  binaryheaders.py  brikhead.py  caret.py  casting.py  checkwarns.py  cifti2.py  conftest.py  coordimage.py  data.py  dataobj_images.py  deprecated.py  deprecator.py  dft.py  ecat.py  elemcont.py  environment.py  eulerangles.py  filebasedimages.py  fileholders.py  filename_parser.py  fileslice.py  filetuples.py  fileutils.py  floating.py  funcs.py  hdfloadsave.py  header_ufuncs.py  (+47 more)
nibabel-data/: README.rst
nifti/: __init__.py  analyze.py  batteryrunners.py  clib.i  clibs.i  compat.py  dtypes.py  eulerangles.py  extensions.py  format.py  funcs.py  image.py  imageglobals.py  images.py  imgfx.py  ioimps.py  loadsave.py  minc.py  nifti1.py  nifticlib.i  nifticlib.py  niftifile.py  niftiformat.py  niftiimage.py  niftimage_mm.py  quaternions.py  spatialimages.py  spm2analyze.py  spm99analyze.py  utils.py  volumeutils.py
nisext/: __init__.py  ast.py  codegen.py  py3builder.py  sexts.py  testers.py
notebooks/: index.html
old/: ioimplementation.html
reference/: index.html  nibabel._compression.html  nibabel._typing.html  nibabel.affines.html  nibabel.analyze.html  nibabel.arrayproxy.html  nibabel.arraywriters.html  nibabel.batteryrunners.html  nibabel.benchmarks.html  nibabel.brikhead.html  nibabel.caret.html  nibabel.casting.html  nibabel.cifti2.html  nibabel.cmdline.html  nibabel.data.html  nibabel.dataobj_images.html  nibabel.deprecated.html  nibabel.deprecator.html  nibabel.dft.html  nibabel.ecat.html  nibabel.environment.html  nibabel.eulerangles.html  nibabel.filebasedimages.html  nibabel.fileholders.html  nibabel.filename_parser.html  nibabel.fileslice.html  nibabel.fileutils.html  nibabel.freesurfer.html  nibabel.funcs.html  nibabel.gifti.html  nibabel.html  nibabel.imageclasses.html  nibabel.imageglobals.html  nibabel.imagestats.html  nibabel.loadsave.html  nibabel.minc1.html  nibabel.minc2.html  nibabel.mriutils.html  nibabel.nicom.html  nibabel.nifti1.html  (+22 more)
tests/: main.py  ruff.toml  test_extensions.py  test_fileio.py  test_format.py  test_main.py  test_misc.py  test_utils.py
tools/: bisect_nose.py  build_release  checkversion.py  data.wsgi  dicomfs.wsgi  gitwash_dumper.py  install_python.ps1  make_tarball.py  markdown_release_notes.py  mpkg_wrapper.py  prep_citation_cff.py  prep_zenodo.py  profile  refresh_readme.py  release  test_pkg_install_info.py  toollib.py  update_requirements.py  upload-gh-pages.sh  valgrind-python  valgrind-python.supp
(+490 files in other folders)
