[metadata]
name = nibabel
url = https://nipy.org/nibabel
download_url = https://github.com/nipy/nibabel
author = nibabel developers
author_email = neuroimaging@python.org
maintainer = Chris Markiewicz
maintainer_email = neuroimaging@python.org
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
license = MIT License
description = Access a multitude of neuroimaging data formats
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = OS Independent
provides =
    nibabel
    nisext

[options]
python_requires = >=3.6
install_requires =
    numpy >=1.15
    packaging >=17.0
    setuptools
zip_safe = False
packages = find:

[options.extras_require]
dicom =
    pydicom >=0.9.9
dicomfs =
    %(dicom)s
    pillow
dev =
    gitpython
    twine
doc =
    matplotlib >= 1.5.3
    numpydoc
    sphinx >=0.3,<3
    texext
minc2 =
    h5py
spm =
    scipy
style =
    flake8
test =
    coverage
    pytest !=5.3.4
    pytest-cov
    pytest-doctestplus
zstd =
    pyzstd >= 0.14.3
all =
    %(dicomfs)s
    %(dev)s
    %(doc)s
    %(minc2)s
    %(spm)s
    %(style)s
    %(test)s
    %(zstd)s

[options.entry_points]
console_scripts =
    nib-conform=nibabel.cmdline.conform:main
    nib-ls=nibabel.cmdline.ls:main
    nib-dicomfs=nibabel.cmdline.dicomfs:main
    nib-diff=nibabel.cmdline.diff:main
    nib-stats=nibabel.cmdline.stats:main
    nib-nifti-dx=nibabel.cmdline.nifti_dx:main
    nib-tck2trk=nibabel.cmdline.tck2trk:main
    nib-trk2tck=nibabel.cmdline.trk2tck:main
    nib-roi=nibabel.cmdline.roi:main
    parrec2nii=nibabel.cmdline.parrec2nii:main

[options.package_data]
nibabel =
    tests/data/*
    */tests/data/*
    benchmarks/pytest.benchmark.ini

[flake8]
max-line-length = 100
ignore = D100,D101,D102,D103,D104,D105,D200,D201,D202,D204,D205,D208,D209,D210,D300,D301,D400,D401,D403,E24,E121,E123,E126,E226,E266,E402,E704,E731,F821,I100,I101,I201,N802,N803,N804,N806,W503,W504,W605
exclude =
    *test*
    *sphinx*
    nibabel/externals/*
    */__init__.py

[versioneer]
VCS = git
style = pep440
versionfile_source = nibabel/_version.py
versionfile_build = nibabel/_version.py
tag_prefix =
parentdir_prefix =
