[options.extras_require]
dicom =
    pydicom >=1.0.0
dicomfs =
    %(dicom)s
    pillow
dev =
    gitpython
    twine
doc =
    matplotlib >= 1.5.3
    numpydoc
    sphinx ~= 5.3
    texext
    toml
minc2 =
    h5py
spm =
    scipy
style =
    flake8
test =
    coverage
    pytest !=5.3.4
    pytest-cov
    pytest-doctestplus
    pytest-httpserver
    pytest-xdist
zstd =
    pyzstd >= 0.14.3
all =
    %(dicomfs)s
    %(dev)s
    %(doc)s
    %(minc2)s
    %(spm)s
    %(style)s
    %(test)s
    %(zstd)s

[flake8]
max-line-length = 100
extend-ignore = E203,E266,E402,E731
exclude =
    *test*
    *sphinx*
    nibabel/externals/*
per-file-ignores =
    */__init__.py: F401

[versioneer]
VCS = git
style = pep440
versionfile_source = nibabel/_version.py
versionfile_build = nibabel/_version.py
tag_prefix =
parentdir_prefix =
