[options.extras_require]
dicom =
    pydicom >=1.0.0
dicomfs =
    %(dicom)s
    pillow
dev =
    gitpython
    twine
doc =
    matplotlib >= 1.5.3
    numpydoc
    sphinx >=0.3,<3
    texext
minc2 =
    h5py
spm =
    scipy
style =
    flake8
test =
    coverage
    pytest !=5.3.4
    pytest-cov
    pytest-doctestplus
    pytest-httpserver
zstd =
    pyzstd >= 0.14.3
all =
    %(dicomfs)s
    %(dev)s
    %(doc)s
    %(minc2)s
    %(spm)s
    %(style)s
    %(test)s
    %(zstd)s

[flake8]
max-line-length = 100
ignore = D100,D101,D102,D103,D104,D105,D200,D201,D202,D204,D205,D208,D209,D210,D300,D301,D400,D401,D403,E24,E121,E123,E126,E226,E266,E402,E704,E731,F821,I100,I101,I201,N802,N803,N804,N806,W503,W504,W605
exclude =
    venv
    build
    *test*
    *sphinx*
    nibabel/externals/*
    */__init__.py
    # temporary -- should be removed in another PR
    ./doc/source/conf.py
    ./doc/tools/apigen.py
    ./nisext
    ./tools

[versioneer]
VCS = git
style = pep440
versionfile_source = nibabel/_version.py
versionfile_build = nibabel/_version.py
tag_prefix =
parentdir_prefix =
